test/tests/compiler/18_structures/invalid_parse/struct_decl_double_semicolon.plx
type struc s(
    a: i32,  # extra semicolon that doesn't follow declaration is a syntax error
)
